RESOLVED FIXED95894
Throw exceptions when assigning to const in strict mode
https://bugs.webkit.org/show_bug.cgi?id=95894
Summary Throw exceptions when assigning to const in strict mode
Geoffrey Garen
Reported 2012-09-05 14:16:20 PDT
Throw exceptions when assigning to const in strict mode
Attachments
Patch (5.32 KB, patch)
2012-09-05 14:19 PDT, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2012-09-05 14:19:16 PDT
Geoffrey Garen
Comment 2 2012-09-05 14:44:09 PDT
Note You need to log in before you can comment on or make changes to this bug.